Fix React script not showing up

--- a/mysite/myapp/static/frontend/css/drews_css.css
+++ b/mysite/myapp/static/frontend/css/drews_css.css
@@ -7,11 +7,11 @@ body {
   background-color: #2e303e;
   border-radius: 10px;
   height: 700px;
-  width: 60%;
+  width: 1100px;
   position: absolute;
   top: 40%;
   left: 50%;
-  margin-left: -30%;
+  margin-left: -550px;
   margin-top: -350px;
   border: 1px solid #bfcad0;
   border-radius: 10px;
@@ -62,8 +62,21 @@ body {
   }
 
 .container {
+  width: 1000px;
+  height: 50px;
+  float: left;
+  /*border: 1px solid #bfcad0;*/
 }
 
 .sidebar {
+  width: 200px;
+  float: left;
 }
 
+#app {
+  float: left;
+  height: 400px;
+  margin-top: 25px;
+  margin-left: 250px;
+  /*border: 1px solid #bfcad0;*/
+}
